--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+        <activity android:name="com.tenday.go.TwoPlayers" />
+
     </application>
 
 </manifest>
