Added class OnePlayer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
 
         <activity android:name="com.tenday.go.TwoPlayers" />
 
+        <activity android:name="com.tenday.go.OnePlayer" />
+
     </application>
 
 </manifest>
