--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '27.0.1'
     defaultConfig {
         applicationId "com.tenday.go"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 8
         versionName "1.1"
@@ -20,25 +20,25 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //compile 'com.google.firebase: firebase-config: 11.6.0'
     //compile 'com.google.android.gms:play-services'
     /*compile 'com.google.firebase:firebase-core:10.0.1'*/
-
     /*compile 'com.google.firebase:firebase-database:9.0.0'
-    compile 'com.firebaseui:firebase-ui-database:0.4.0'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.github.bumptech.glide:glide:3.6.1'*/
-
+                                                        compile 'com.firebaseui:firebase-ui-database:0.4.0'
+                                                        compile 'de.hdodenhof:circleimageview:1.3.0'
+                                                        compile 'com.github.bumptech.glide:glide:3.6.1'*/
     /*compile 'com.google.firebase:firebase-messaging:9.0.0'*/
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-config:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
+    implementation 'org.eclipse.ecf:org.apache.log4j:1.2.15.v201012070815'
+    implementation 'org.apache.directory.studio:org.apache.commons.collections:3.2.1'
 }
 
 
